# fastapi-agent

./: .gitignore  README.md  makefile  package.json  pnpm-lock.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 81f8be8181e6_add_create_at.py  bc3b8ae7c09f_create_chat_session_and_message_tables.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/modules/agents/: model.py  tools.py
app/modules/chats/: router.py  schema.py
app/modules/sessions/: router.py  services.py
app/modules/uploads/: __init__.py  router.py
apps/backend/: README.md  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: e493fcfc2e70_add_chat_message_fields.py
apps/backend/app/: main.py
apps/backend/app/models/: engine.py
apps/backend/app/modules/agents/: prompt.py  tools.py
apps/backend/app/modules/chats/: router.py  services.py
apps/backend/app/modules/sessions/: router.py
apps/backend/app/utils/: params.py
apps/frontend/: package-lock.json
